# hw2font

./: .gitignore  LICENSE  PRD.md  README.md  alt-config.toml  pyproject.toml  re5p-config.toml  sailor-config.toml
src/hw2font/: __init__.py  cli.py  constants.py  webfont.py
src/hw2font/autotune/: __init__.py  engine.py
src/hw2font/compile/: builder.py
src/hw2font/extract/: pipeline.py
src/hw2font/proof/: sheet.py
src/hw2font/template/: generator.py
tests/: test_autotune_units.py  test_builder_units.py  test_cli_units.py  test_pipeline.py  test_webfont_units.py
